--- a/series.conf
+++ b/series.conf
@@ -53169,6 +53169,7 @@
 	patches.suse/firmware-arm_sdei-fix-possible-double-lock-on-hibern.patch
 	patches.suse/0001-btrfs-relocation-add-error-injection-points-for-canc.patch
 	patches.suse/0002-btrfs-relocation-Check-cancel-request-after-each-dat.patch
+	patches.suse/0003-btrfs-relocation-Check-cancel-request-after-each-ext.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
 	patches.suse/net-ethtool-Introduce-link_ksettings-API-for-virtual.patch
