--- a/series.conf
+++ b/series.conf
@@ -53807,6 +53807,7 @@
 	patches.suse/btrfs-qgroups-fix-rescan-worker-running-races.patch
 	patches.suse/btrfs-suspend-qgroups-during-relocation-recovery.patch
 	patches.suse/0001-btrfs-qgroup-Make-qgroup-async-transaction-commit-mo.patch
+	patches.suse/btrfs-relocation-Work-around-dead-relocation-stage-l.patch
 	patches.suse/reiserfs-mark-read-write-mode-unsupported.patch
 
 	patches.suse/reiserfs-add-check-to-detect-corrupted-directory-entry.patch
