--- a/series.conf
+++ b/series.conf
@@ -25403,6 +25403,7 @@
 	patches.suse/powerpc-64s-support-nospectre_v2-cmdline-option.patch
 	patches.suse/powerpc-64s-radix-tidy-up-TLB-flushing-code.patch
 	patches.suse/powerpc-64s-pseries-radix-flush-translations-before-.patch
+	patches.suse/powerpc-Add-attributes-for-setjmp-longjmp.patch
 	patches.suse/powerpc-pseries-correctly-track-irq-state-in-default.patch
 	patches.suse/powerpc-xive-Fix-bogus-error-code-returned-by-OPAL.patch
 	patches.suse/powerpc-dump-kernel-log-before-carrying-out-fadump-o.patch
