crypto: ccp - AES CFB mode is a stream cipher (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -24385,6 +24385,7 @@
 	patches.suse/perf-x86-intel-uncore-Cosmetic-renames-in-response-t.patch
 	patches.suse/perf-x86-intel-rapl-Cosmetic-rename-internal-variabl.patch
 	patches.suse/tpm-Fix-TPM-1.2-Shutdown-sequence-to-prevent-future-.patch
+	patches.suse/crypto-ccp-AES-CFB-mode-is-a-stream-cipher.patch
 	patches.suse/crypto-ccp-fix-AES-CFB-error-exposed-by-new-test-vec.patch
 	patches.suse/crypto-ccp-Fix-3DES-complaint-from-ccp-crypto-module.patch
 	patches.suse/crypto-talitos-fix-skcipher-failure-due-to-wrong-out.patch
