serial: uartps: Move the spinlock after the read of the tx empty (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -24603,6 +24603,7 @@
 	patches.suse/serial-stm32-fix-transmit_chars-when-tx-is-stopped.patch
 	patches.suse/tty-serial-cpm_uart-fix-init-when-SMC-is-relocated.patch
 	patches.suse/tty-serial-digicolor-Fix-digicolor-usart-already-reg.patch
+	patches.suse/serial-uartps-Move-the-spinlock-after-the-read-of-th.patch
 	patches.suse/serial-8250-Fix-TX-interrupt-handling-condition.patch
 	patches.suse/tty-serial-msm_serial-avoid-system-lockup-condition.patch
 	patches.suse/serial-uartps-Fix-multiple-line-dereference.patch
