--- a/series.conf
+++ b/series.conf
@@ -25270,6 +25270,7 @@
 	patches.suse/crypto-ccp-Reduce-maximum-stack-usage.patch
 	patches.suse/crypto-qat-Silence-smp_processor_id-warning.patch
 	patches.suse/crypto-caam-fix-concurrency-issue-in-givencrypt-desc.patch
+	patches.suse/crypto-ccp-Clean-up-and-exit-correctly-on-allocation.patch
 	patches.suse/crypto-caam-free-resources-in-case-caam_rng-registra.patch
 	patches.suse/crypto-skcipher-Unmap-pages-after-an-external-error.patch
 	patches.suse/crypto-cavium-zip-Add-missing-single_release.patch
