--- a/series.conf
+++ b/series.conf
@@ -27248,6 +27248,7 @@
 	patches.suse/drm-meson-Delete-an-error-message-in-meson_dw_hdmi_b.patch
 	patches.suse/ALSA-hda-realtek-Fix-unexpected-init_amp-override.patch
 	patches.suse/ALSA-usx2y-Fix-potential-NULL-dereference.patch
+	patches.suse/ASoC-topology-Check-return-value-of-pcm_new_ver.patch
 	patches.suse/ASoC-dapm-fixup-dapm-kcontrol-widget.patch
 	patches.suse/ALSA-usb-audio-Fix-usb-audio-refcnt-leak-when-gettin.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC245.patch
