--- a/series.conf
+++ b/series.conf
@@ -27083,6 +27083,7 @@
 	patches.suse/irqchip-bcm2835-Quiesce-IRQs-left-enabled-by-bootloa.patch
 	patches.suse/fbdev-g364fb-Fix-build-failure.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
+	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
 	patches.suse/net-ethtool-Introduce-link_ksettings-API-for-virtual.patch
 	patches.suse/Bluetooth-RFCOMM-fix-ODEBUG-bug-in-rfcomm_dev_ioctl.patch
