--- a/series.conf
+++ b/series.conf
@@ -53372,6 +53372,7 @@
 	patches.suse/ASoC-dpcm-allow-start-or-stop-during-pause-for-backe.patch
 	patches.suse/ASoC-topology-use-name_prefix-for-new-kcontrol.patch
 	patches.suse/ASoC-Intel-atom-Take-the-drv-lock-mutex-before-calli.patch
+	patches.suse/drm-amdgpu-Fix-oops-when-pp_funcs-is-unset-in-ACPI-e.patch
 	patches.suse/ipmi-fix-hung-processes-in-__get_guid.patch
 	patches.suse/pwm-bcm2835-Dynamically-allocate-base.patch
 	patches.suse/pwm-meson-Fix-confusing-indentation.patch
