--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1535,3 +1535,4 @@ f9bf8adb55cd5a357b247a16aafddf8c97b276e0 # not a regression - Fixes tag is wrong
 71912e08e06b7041ba3b40945328b84798dfe6fc # gcc warning fix on comment description
 5a57c05b56b6eb2b4e3eb2a9f205e39e849325a1 # sparse warning fix
 d61acbbf54c612ea9bf67eed609494cda0857b3a # Needs extra dependency, while current out-of-tree solution is good enough
+12ecef0cb12102d8c034770173d2d1363cb97d52 # not (yet) a bug, preparatory patch
