--- a/series.conf
+++ b/series.conf
@@ -27222,6 +27222,7 @@
 	patches.suse/powerpc-xive-Use-XIVE_BAD_IRQ-instead-of-zero-to-cat.patch
 	patches.suse/powerpc-64-tm-Don-t-let-userspace-set-regs-trap-via-.patch
 	patches.suse/powerpc-vmlinux.lds-Explicitly-retain-.gnu.hash.patch
+	patches.suse/ipv6-don-t-auto-add-link-local-address-to-lag-ports.patch
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
 	patches.suse/net-phy-micrel-kszphy_resume-add-delay-after-genphy_.patch
 	patches.suse/0001-mm-memory_hotplug.c-only-respect-mem-parameter-durin.patch
