net: dsa: bcm_sf2: Ensure correct sub-node is parsed (networking-stable-20_04_09).

--- a/series.conf
+++ b/series.conf
@@ -27227,6 +27227,7 @@
 	patches.suse/net-phy-micrel-kszphy_resume-add-delay-after-genphy_.patch
 	patches.suse/net-dsa-bcm_sf2-Do-not-register-slave-MDIO-bus-with-.patch
 	patches.suse/mlxsw-spectrum_flower-Do-not-stop-at-FLOW_ACTION_VLA.patch
+	patches.suse/net-dsa-bcm_sf2-Ensure-correct-sub-node-is-parsed.patch
 	patches.suse/0001-mm-memory_hotplug.c-only-respect-mem-parameter-durin.patch
 	patches.suse/mfd-dln2-Fix-sanity-checking-for-endpoints.patch
 	patches.suse/thermal-devfreq_cooling-inline-all-stubs-for-CONFIG_.patch
