--- a/series.conf
+++ b/series.conf
@@ -27226,6 +27226,7 @@
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
 	patches.suse/net-phy-micrel-kszphy_resume-add-delay-after-genphy_.patch
 	patches.suse/net-dsa-bcm_sf2-Do-not-register-slave-MDIO-bus-with-.patch
+	patches.suse/mlxsw-spectrum_flower-Do-not-stop-at-FLOW_ACTION_VLA.patch
 	patches.suse/0001-mm-memory_hotplug.c-only-respect-mem-parameter-durin.patch
 	patches.suse/mfd-dln2-Fix-sanity-checking-for-endpoints.patch
 	patches.suse/thermal-devfreq_cooling-inline-all-stubs-for-CONFIG_.patch
