--- a/series.conf
+++ b/series.conf
@@ -27329,6 +27329,7 @@
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_v_ogm_process.patch
 	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
+	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
