- USB: sisusbvga: Change port variable from signed to unsigned   (git-fixes). - blacklist.conf: removed mistaken entry

--- a/series.conf
+++ b/series.conf
@@ -27276,6 +27276,7 @@
 	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
 	patches.suse/usb-gadget-udc-atmel-Fix-vbus-disconnect-handling.patch
 	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
+	patches.suse/USB-sisusbvga-Change-port-variable-from-signed-to-un.patch
 	patches.suse/mmc-sdhci-xenon-fix-annoying-1.8V-regulator-warning.patch
 	patches.suse/mmc-sdhci-pci-Fix-eMMC-driver-strength-for-BYT-based.patch
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
