--- a/series.conf
+++ b/series.conf
@@ -27387,6 +27387,7 @@
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 	patches.suse/objtool-fix-stack-offset-tracking-for-indirect-cfas.patch
+	patches.suse/x86-entry-64-fix-unwind-hints-in-register-clearing-code.patch
 	patches.suse/ALSA-usb-audio-Add-control-message-quirk-delay-for-K.patch
 	patches.suse/Revert-ALSA-hda-realtek-Fix-pop-noise-on-ALC225.patch
 	patches.suse/ALSA-hda-realtek-Fix-S3-pop-noise-on-Dell-Wyse.patch
