--- a/series.conf
+++ b/series.conf
@@ -27389,6 +27389,7 @@
 	patches.suse/objtool-fix-stack-offset-tracking-for-indirect-cfas.patch
 	patches.suse/x86-entry-64-fix-unwind-hints-in-register-clearing-code.patch
 	patches.suse/x86-entry-64-fix-unwind-hints-in-kernel-exit-path.patch
+	patches.suse/x86-entry-64-fix-unwind-hints-in-_switch_to_asm.patch
 	patches.suse/ALSA-usb-audio-Add-control-message-quirk-delay-for-K.patch
 	patches.suse/Revert-ALSA-hda-realtek-Fix-pop-noise-on-ALC225.patch
 	patches.suse/ALSA-hda-realtek-Fix-S3-pop-noise-on-Dell-Wyse.patch
