--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1532,3 +1532,4 @@ f9bf8adb55cd5a357b247a16aafddf8c97b276e0 # not a regression - Fixes tag is wrong
 0df9433fcae02215c8fd79690c134d535c7bb905 # we do not have a virtual bus for altmodes, only type C, misatttributed
 32dcfe8316cdbd885542967c0c85f5b9de78874b # kABI
 26d5a3245b3f3ce406277e7584f7ccbbd5ea98bb # ridiculous cosmetic fix
+2d4ecb030dcc90fb725ecbfc82ce5d6c37906e0e # doesn't apply to 4.12, see bsc#1169524
