--- a/series.conf
+++ b/series.conf
@@ -26307,6 +26307,7 @@
 	patches.suse/powerpc-Fix-vDSO-clock_getres.patch
 	patches.suse/powerpc-archrandom-fix-arch_get_random_seed_int.patch
 	patches.suse/NFSv4.x-Drop-the-slot-if-nfs4_delegreturn_prepare-wa.patch
+	patches.suse/nfsd4-fix-up-replay_matches_cache.patch
 	patches.suse/Input-goodix-add-upside-down-quirk-for-Teclast-X89-t.patch
 	patches.suse/Input-synaptics-rmi4-don-t-increment-rmiaddr-for-SMB.patch
 	patches.suse/CIFS-Fix-NULL-pointer-dereference-in-smb2_push_mandatory_locks.patch
