NFS: Directory page cache pages need to be locked when read (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26816,6 +26816,7 @@
 	patches.suse/NFS-Revalidate-the-file-size-on-a-fatal-write-error.patch
 	patches.suse/NFS-pnfs-Fix-pnfs_generic_prepare_to_resend_writes.patch
 	patches.suse/NFS-Fix-memory-leaks-and-corruption-in-readdir.patch
+	patches.suse/NFS-Directory-page-cache-pages-need-to-be-locked-whe.patch
 	patches.suse/soc-tegra-fuse-Correct-straps-address-for-older-Tegr.patch
 	patches.suse/net_sched-fix-a-resource-leak-in-tcindex_set_parms.patch
 	patches.suse/bonding-alb-properly-access-headers-in-bond_alb_xmit.patch
