--- a/series.conf
+++ b/series.conf
@@ -27300,6 +27300,7 @@
 	patches.suse/ALSA-opti9xx-shut-up-gcc-10-range-warning.patch
 	patches.suse/ALSA-usb-audio-Correct-a-typo-of-NuPrime-DAC-10-USB-.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
+	patches.suse/nfs-Fix-potential-posix_acl-refcnt-leak-in-nfs3_set_.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
