--- a/series.conf
+++ b/series.conf
@@ -26821,6 +26821,7 @@
 	patches.suse/NFSv4.0-nfs4_do_fsinfo-should-not-do-implicit-lease-.patch
 	patches.suse/nfsd-fix-delay-timer-on-32-bit-architectures.patch
 	patches.suse/nfsd-fix-jiffies-time_t-mixup-in-LRU-list.patch
+	patches.suse/sunrpc-expiry_time-should-be-seconds-not-timeval.patch
 	patches.suse/soc-tegra-fuse-Correct-straps-address-for-older-Tegr.patch
 	patches.suse/net_sched-fix-a-resource-leak-in-tcindex_set_parms.patch
 	patches.suse/bonding-alb-properly-access-headers-in-bond_alb_xmit.patch
