--- a/series.conf
+++ b/series.conf
@@ -27265,6 +27265,7 @@
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/x86-resctrl-Fix-invalid-attempt-at-removing-the-defa.patch
+	patches.suse/nfsd-memory-corruption-in-nfsd4_lock.patch
 	patches.suse/drm-meson-Delete-an-error-message-in-meson_dw_hdmi_b.patch
 	patches.suse/ALSA-hda-realtek-Fix-unexpected-init_amp-override.patch
 	patches.suse/ALSA-usx2y-Fix-potential-NULL-dereference.patch
