pNFS: Ensure we do clear the return-on-close layout stateid on fatal errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25565,6 +25565,7 @@
 	patches.suse/s390-topology-avoid-firing-events-before-kobjs-are-created
 	patches.suse/s390-cio-avoid-calling-strlen-on-null-pointer
 	patches.suse/s390-cio-exclude-subchannels-with-no-parent-from-pseudo-check
+	patches.suse/pNFS-Ensure-we-do-clear-the-return-on-close-layout-s.patch
 	patches.suse/drm-amdgpu-Check-for-valid-number-of-registers-to-re.patch
 	patches.suse/watchdog-imx2_wdt-fix-min-calculation-in-imx2_wdt_se.patch
 	patches.suse/thermal_hwmon-Sanitize-thermal_zone-type.patch
