NFS/flexfiles: Use the correct TCP timeout for flexfiles I/O (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -24322,6 +24322,7 @@
 	patches.suse/af_packet-Block-execution-of-tasks-waiting-for-trans.patch
 	patches.suse/dm-log-writes-make-sure-super-sector-log-updates-are.patch
 	patches.suse/scsi-vmw_pscsi-Fix-use-after-free-in-pvscsi_queue_lc.patch
+	patches.suse/NFS-flexfiles-Use-the-correct-TCP-timeout-for-flexfi.patch
 	patches.suse/efi-bgrt-Drop-BGRT-status-field-reserved-bits-check.patch
 	patches.suse/x86-microcode-fix-the-microcode-load-on-cpu-hotplug-for-real.patch
 	patches.suse/x86-speculation-allow-guests-to-use-ssbd-even-if-host-does-not.patch
