--- a/series.conf
+++ b/series.conf
@@ -26819,6 +26819,7 @@
 	patches.suse/NFS-Directory-page-cache-pages-need-to-be-locked-whe.patch
 	patches.suse/NFSv4-try-lease-recovery-on-NFS4ERR_EXPIRED.patch
 	patches.suse/NFSv4.0-nfs4_do_fsinfo-should-not-do-implicit-lease-.patch
+	patches.suse/nfsd-fix-delay-timer-on-32-bit-architectures.patch
 	patches.suse/soc-tegra-fuse-Correct-straps-address-for-older-Tegr.patch
 	patches.suse/net_sched-fix-a-resource-leak-in-tcindex_set_parms.patch
 	patches.suse/bonding-alb-properly-access-headers-in-bond_alb_xmit.patch
