--- a/series.conf
+++ b/series.conf
@@ -26815,6 +26815,7 @@
 	patches.suse/clk-qcom-rcg2-Don-t-crash-if-our-parent-can-t-be-fou.patch
 	patches.suse/NFS-Revalidate-the-file-size-on-a-fatal-write-error.patch
 	patches.suse/NFS-pnfs-Fix-pnfs_generic_prepare_to_resend_writes.patch
+	patches.suse/NFS-Fix-memory-leaks-and-corruption-in-readdir.patch
 	patches.suse/soc-tegra-fuse-Correct-straps-address-for-older-Tegr.patch
 	patches.suse/net_sched-fix-a-resource-leak-in-tcindex_set_parms.patch
 	patches.suse/bonding-alb-properly-access-headers-in-bond_alb_xmit.patch
