xprtrdma: Fix completion wait during device removal (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26493,6 +26493,7 @@
 	patches.suse/iommu-remove-device-link-to-group-on-failure
 	patches.suse/iommu-vt-d-unlink-device-if-failed-to-add-to-group
 	patches.suse/drm-i915-gen9-Clear-residual-context-state-on-contex.patch
+	patches.suse/xprtrdma-Fix-completion-wait-during-device-removal.patch
 	patches.suse/fix-autofs-regression-caused-by-follow_managed-changes.patch
 	patches.suse/platform-x86-asus-wmi-Fix-keyboard-brightness-cannot.patch
 	patches.suse/clk-Don-t-try-to-enable-critical-clocks-if-prepare-f.patch
