md/raid10: prevent access of uninitialized resync_pages offset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25974,6 +25974,7 @@
 	patches.suse/blk-mq-make-sure-that-line-break-can-be-printed.patch
 	patches.suse/0007-md-raid0-Fix-an-error-message-in-raid0_make_request.patch
 	patches.suse/loop-fix-no-unmap-write-zeroes-request-behavior.patch
+	patches.suse/md-raid10-prevent-access-of-uninitialized-resync_pag.patch
 	patches.suse/nbd-prevent-memory-leak.patch
 	patches.suse/0008-dm-zoned-reduce-overhead-of-backing-device-checks.patch
 	patches.suse/mtd-spear_smi-Fix-Write-Burst-mode.patch
