NFSv4/pnfs: Return valid stateids in nfs_layout_find_inode_by_stateid() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27225,6 +27225,7 @@
 	patches.suse/powerpc-vmlinux.lds-Explicitly-retain-.gnu.hash.patch
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
 	patches.suse/net-phy-micrel-kszphy_resume-add-delay-after-genphy_.patch
+	patches.suse/NFSv4-pnfs-Return-valid-stateids-in-nfs_layout_find_.patch
 	patches.suse/0001-mm-memory_hotplug.c-only-respect-mem-parameter-durin.patch
 	patches.suse/mfd-dln2-Fix-sanity-checking-for-endpoints.patch
 	patches.suse/thermal-devfreq_cooling-inline-all-stubs-for-CONFIG_.patch
