NFS: Revalidate the file size on a fatal write error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26813,6 +26813,7 @@
 	patches.suse/KVM-s390-ENOTSUPP-EOPNOTSUPP-fixups.patch
 	patches.suse/KVM-s390-do-not-clobber-registers-during-guest-reset.patch
 	patches.suse/clk-qcom-rcg2-Don-t-crash-if-our-parent-can-t-be-fou.patch
+	patches.suse/NFS-Revalidate-the-file-size-on-a-fatal-write-error.patch
 	patches.suse/soc-tegra-fuse-Correct-straps-address-for-older-Tegr.patch
 	patches.suse/net_sched-fix-a-resource-leak-in-tcindex_set_parms.patch
 	patches.suse/bonding-alb-properly-access-headers-in-bond_alb_xmit.patch
