--- a/series.conf
+++ b/series.conf
@@ -25666,6 +25666,7 @@
 	patches.suse/smb3-Fix-regression-in-time-handling.patch
 	patches.suse/CIFS-Force-revalidate-inode-when-dentry-is-stale.patch
 	patches.suse/CIFS-Force-reval-dentry-if-LOOKUP_REVAL-flag-is-set.patch
+	patches.suse/NFS-Fix-O_DIRECT-accounting-of-number-of-bytes-read-.patch
 	patches.suse/powerpc-pseries-Remove-confusing-warning-message.patch
 	patches.suse/x86-asm-fix-mwaitx-c-state-hint-value.patch
 	patches.suse/efivar-ssdt-Don-t-iterate-over-EFI-vars-if-no-SSDT-o.patch
