--- a/series.conf
+++ b/series.conf
@@ -25797,6 +25797,7 @@
 	patches.suse/RDMA-hns-Prevent-memory-leaks-of-eq-buf_list.patch
 	patches.suse/0001-drm-etnaviv-fix-dumping-of-iommuv2.patch
 	patches.suse/KVM-vmx-svm-always-run-with-EFER.NXE-1-when-shadow-p.patch
+	patches.suse/NFSv4-Don-t-allow-a-cached-open-with-a-revoked-deleg.patch
 	patches.suse/net-mlx5-prevent-memory-leak-in-mlx5_fpga_conn_creat.patch
 	patches.suse/r8152-add-device-id-for-Lenovo-ThinkPad-USB-C-Dock-G.patch
 	patches.suse/net-openvswitch-free-vport-unless-register_netdevice.patch
