x86/unwind: Prevent false warnings for non-current tasks (bsc#1058115).

--- a/series.conf
+++ b/series.conf
@@ -27391,6 +27391,7 @@
 	patches.suse/x86-entry-64-fix-unwind-hints-in-kernel-exit-path.patch
 	patches.suse/x86-entry-64-fix-unwind-hints-in-_switch_to_asm.patch
 	patches.suse/x86-entry-64-fix-unwind-hints-in-rewind_stack_do_exit.patch
+	patches.suse/x86-unwind-prevent-false-warnings-for-non-current-tasks.patch
 	patches.suse/ALSA-usb-audio-Add-control-message-quirk-delay-for-K.patch
 	patches.suse/Revert-ALSA-hda-realtek-Fix-pop-noise-on-ALC225.patch
 	patches.suse/ALSA-hda-realtek-Fix-S3-pop-noise-on-Dell-Wyse.patch
