x86/unwind/orc: Fix error path for bad ORC entry type (bsc#1058115).

--- a/series.conf
+++ b/series.conf
@@ -27394,6 +27394,7 @@
 	patches.suse/x86-unwind-prevent-false-warnings-for-non-current-tasks.patch
 	patches.suse/x86-unwind-orc-don-t-skip-the-first-frame-for-inactive-tasks.patch
 	patches.suse/x86-unwind-orc-prevent-unwinding-before-orc-initialization.patch
+	patches.suse/x86-unwind-orc-fix-error-path-for-bad-orc-entry-type.patch
 	patches.suse/ALSA-usb-audio-Add-control-message-quirk-delay-for-K.patch
 	patches.suse/Revert-ALSA-hda-realtek-Fix-pop-noise-on-ALC225.patch
 	patches.suse/ALSA-hda-realtek-Fix-S3-pop-noise-on-Dell-Wyse.patch
