mmc: meson-gx: simplify interrupt handler (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6358,6 +6358,7 @@
 	patches.suse/0001-mq-deadline-Enable-auto-loading-when-built-as-module.patch
 	patches.suse/mmc-dw_mmc-k3-add-sd-support-for-hi3660.patch
 	patches.suse/mmc-meson-gx-remove-CLK_DIVIDER_ALLOW_ZERO-clock-fla
+	patches.suse/mmc-meson-gx-simplify-interrupt-handler.patch
 	patches.suse/0001-mmc-mmci-stop-building-qcom-dml-as-module.patch
 	patches.suse/0006-md-bitmap-copy-correct-data-for-bitmap-super.patch
 	patches.suse/0005-md-notify-about-new-spare-disk-in-the-container.patch
