--- a/series.conf
+++ b/series.conf
@@ -20224,6 +20224,7 @@
 	patches.suse/ath10k-fix-kernel-panic-by-moving-pci-flush-after-na.patch
 	patches.suse/ath10k-schedule-hardware-restart-if-WMI-command-time.patch
 	patches.suse/ath9k-fix-tx99-with-monitor-mode-interface.patch
+	patches.suse/wil6210-remove-reset-file-from-debugfs.patch
 	patches.suse/ath10k-limit-available-channels-via-DT-ieee80211-fre.patch
 	patches.suse/iwlwifi-don-t-WARN-on-trying-to-dump-dead-firmware.patch
 	patches.suse/iwlwifi-mvm-fix-BAR-seq-ctrl-reporting.patch
