supported.conf: Add br_netfilter to base (bsc#1169020).

--- a/supported.conf
+++ b/supported.conf
@@ -2631,7 +2631,7 @@
 		net/bluetooth/bnep/bnep						# Bluetooth BNEP
 		net/bluetooth/hidp/hidp						# Bluetooth HIDP
 		net/bluetooth/rfcomm/rfcomm					# Bluetooth RFCOMM
-		net/bridge/br_netfilter						# netfilter on bridge interfaces
++base		net/bridge/br_netfilter						# netfilter on bridge interfaces (bsc#1169020).
 +base		net/bridge/bridge						# 802.1d Ethernet Bridging
 		net/bridge/netfilter/ebt_802_3
 		net/bridge/netfilter/ebt_among
