scsi: core: Handle drivers which set sg_tablesize to zero (bsc#1171601)
This commit also required:
> scsi: core: avoid preallocating big SGL for data

--- a/series.conf
+++ b/series.conf
@@ -24584,6 +24584,7 @@
 	patches.suse/scsi-qla2xxx-on-session-delete-return-nvme-cmd.patch
 	patches.suse/scsi-qla2xxx-Fix-NVME-cmd-and-LS-cmd-timeout-race-co.patch
 	patches.suse/scsi-qla2xxx-move-IO-flush-to-the-front-of-NVME-rpor.patch
+	patches.suse/scsi-core-avoid-preallocating-big-sgl-for-data
 	patches.suse/livepatch-use-static-buffer-for-debugging-messages-under-rq-lock.patch
 	patches.suse/revert-livepatch-remove-reliable-stacktrace-check-in-klp_try_switch_task.patch
 	patches.suse/livepatch-remove-duplicate-warning-about-missing-reliable-stacktrace-support.patch
@@ -25898,6 +25899,7 @@
 	patches.suse/reset-fix-reset_control_get_exclusive-kerneldoc-comm.patch
 	patches.suse/reset-fix-reset_control_ops-kerneldoc-comment.patch
 	patches.suse/scsi-qla2xxx-fix-NPIV-tear-down-process.patch
+	patches.suse/scsi-core-handle-drivers-which-set-sg_tablesize-to-zero
 	patches.suse/0010-drm-i915-Rename-gen7-cmdparser-tables.patch
 	patches.suse/0011-drm-i915-Disable-Secure-Batches-for-gen6.patch
 	patches.suse/0012-drm-i915-Remove-Master-tables-from-cmdparser.patch
