scsi: ufs: Fix ufshcd_probe_hba() reture value in case ufshcd_scsi_add_wlus() fails (bsc#1171625).

--- a/series.conf
+++ b/series.conf
@@ -26705,6 +26705,7 @@
 	patches.suse/scsi-qla2xxx-Use-get_unaligned_-instead-of-open-codi.patch
 	patches.suse/scsi-megaraid_sas-do-not-initiate-ocr-if-controller-is-not-in-ready-state
 	patches.suse/scsi-qla2xxx-Fix-a-NULL-pointer-dereference-in-an-er.patch
+	patches.suse/scsi-ufs-fix-ufshcd_probe_hba-reture-value-in-case-ufshcd_scsi_add_wlus-fails
 	patches.suse/power-supply-ltc2941-battery-gauge-fix-use-after-fre.patch
 	patches.suse/drm-gma500-Fixup-fbdev-stolen-size-usage-evaluation.patch
 	patches.suse/drm-amdgpu-remove-4-set-but-not-used-variable-in-amd.patch
