--- a/series.conf
+++ b/series.conf
@@ -26685,6 +26685,7 @@
 	patches.suse/0014-dm-writecache-fix-incorrect-flush-sequence-when-doin.patch
 	patches.suse/scsi-ufs-recheck-bkops-level-if-bkops-is-disabled
 	patches.suse/scsi-qla4xxx-adjust-indentation-in-qla4xxx_mem_free
+	patches.suse/scsi-csiostor-adjust-indentation-in-csio_device_reset
 	patches.suse/scsi-qla2xxx-Remove-defer-flag-to-indicate-immeadiat.patch
 	patches.suse/scsi-qla2xxx-Fix-fabric-scan-hang.patch
 	patches.suse/scsi-qla2xxx-Add-a-shadow-variable-to-hold-disc_stat.patch
