--- a/series.conf
+++ b/series.conf
@@ -26703,6 +26703,7 @@
 	patches.suse/scsi-qla2xxx-Improve-readability-of-the-code-that-ha.patch
 	patches.suse/scsi-qla2xxx-Fix-the-endianness-of-the-qla82xx_get_f.patch
 	patches.suse/scsi-qla2xxx-Use-get_unaligned_-instead-of-open-codi.patch
+	patches.suse/scsi-megaraid_sas-do-not-initiate-ocr-if-controller-is-not-in-ready-state
 	patches.suse/scsi-qla2xxx-Fix-a-NULL-pointer-dereference-in-an-er.patch
 	patches.suse/power-supply-ltc2941-battery-gauge-fix-use-after-fre.patch
 	patches.suse/drm-gma500-Fixup-fbdev-stolen-size-usage-evaluation.patch
