scsi: ufs: change msleep to usleep_range (bsc#1171622).

--- a/series.conf
+++ b/series.conf
@@ -25421,6 +25421,7 @@
 	patches.suse/RDMA-Fix-goto-target-to-release-the-allocated-memory.patch
 	patches.suse/RDMA-bnxt_re-Fix-spelling-mistake-missin_resp-missin.patch
 	patches.suse/0004-dm-zoned-fix-invalid-memory-access.patch
+	patches.suse/scsi-ufs-change-msleep-to-usleep_range
 	patches.suse/scsi-qla2xxx-Remove-unnecessary-null-check.patch
 	patches.suse/scsi-qla2xxx-Replace-vmalloc-memset-with-vzalloc.patch
 	patches.suse/scsi-cxlflash-Mark-expected-switch-fall-throughs.patch
