--- a/series.conf
+++ b/series.conf
@@ -26270,6 +26270,7 @@
 	patches.suse/scsi-qla2xxx-Fix-a-dma_pool_free-call.patch
 	patches.suse/scsi-qla2xxx-initialize-fc4_type_priority.patch
 	patches.suse/scsi-qla2xxx-don-t-use-zero-for-FC4_PRIORITY_NVME.patch
+	patches.suse/scsi-lpfc-fix-coverity-lpfc_cmpl_els_rsp-null-pointer-dereferences
 	patches.suse/xfs-Sanity-check-flags-of-Q_XQUOTARM-call.patch
 	patches.suse/0009-hrtimer-Annotate-lockless-access-to-timer-state.patch
 	patches.suse/apparmor-fix-unsigned-len-comparison-with-less-than-zero.patch
