--- a/series.conf
+++ b/series.conf
@@ -26683,6 +26683,7 @@
 	patches.suse/namei-only-return-ECHILD-from-follow_dotdot_rcu.patch
 	patches.suse/0013-dm-zoned-support-zone-sizes-smaller-than-128MiB.patch
 	patches.suse/0014-dm-writecache-fix-incorrect-flush-sequence-when-doin.patch
+	patches.suse/scsi-ufs-recheck-bkops-level-if-bkops-is-disabled
 	patches.suse/scsi-qla2xxx-Remove-defer-flag-to-indicate-immeadiat.patch
 	patches.suse/scsi-qla2xxx-Fix-fabric-scan-hang.patch
 	patches.suse/scsi-qla2xxx-Add-a-shadow-variable-to-hold-disc_stat.patch
