--- a/series.conf
+++ b/series.conf
@@ -27271,6 +27271,7 @@
 	patches.suse/ALSA-hda-Don-t-release-card-at-firmware-loading-erro.patch
 	patches.suse/ALSA-hda-Keep-the-controller-initialization-even-if-.patch
 	patches.suse/scsi-qla2xxx-Fix-regression-warnings.patch
+	patches.suse/scsi-sg-add-sg_remove_request-in-sg_common_write
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/x86-resctrl-Fix-invalid-attempt-at-removing-the-defa.patch
