--- a/series.conf
+++ b/series.conf
@@ -26381,6 +26381,7 @@
 	patches.suse/0013-scsi-qla2xxx-Add-debug-dump-of-LOGO-payload-and-ELS-.patch
 	patches.suse/scsi-iscsi-qla4xxx-fix-double-free-in-probe
 	patches.suse/scsi-libsas-stop-discovering-if-oob-mode-is-disconnected
+	patches.suse/scsi-iscsi-fix-a-potential-deadlock-in-the-timeout-handler
 	patches.suse/regulator-rn5t618-fix-module-aliases.patch
 	patches.suse/btrfs-do-not-call-synchronize_srcu-in-inode_tree_del.patch
 	patches.suse/btrfs-don-t-double-lock-the-subvol_sem-for-rename-exchange.patch
