--- a/series.conf
+++ b/series.conf
@@ -26255,6 +26255,7 @@
 	patches.suse/scsi-qla2xxx-Improve-logging-for-scan-thread.patch
 	patches.suse/scsi-qla2xxx-Update-driver-version-to-10.01.00.20-k.patch
 	patches.suse/scsi-csiostor-don-t-enable-irqs-too-early
+	patches.suse/scsi-esas2r-unlock-on-error-in-esas2r_nvram_read_direct
 	patches.suse/scsi-zfcp-trace-channel-log-even-for-fcp-command-responses
 	patches.suse/scsi-qla2xxx-Retry-PLOGI-on-FC-NVMe-PRLI-failure.patch
 	patches.suse/scsi-qla2xxx-Do-command-completion-on-abort-timeout.patch
