--- a/series.conf
+++ b/series.conf
@@ -25771,6 +25771,7 @@
 	patches.suse/ALSA-hda-Add-Tigerlake-Jasperlake-PCI-ID.patch
 	patches.suse/of-unittest-fix-memory-leak-in-unittest_data_add.patch
 	patches.suse/scsi-qla2xxx-fix-a-potential-NULL-pointer-dereferenc.patch
+	patches.suse/scsi-core-try-to-get-module-before-removing-device
 	patches.suse/USB-ldusb-fix-memleak-on-disconnect.patch
 	patches.suse/USB-legousbtower-fix-memleak-on-disconnect.patch
 	patches.suse/USB-legousbtower-fix-a-signedness-bug-in-tower_probe.patch
