--- a/series.conf
+++ b/series.conf
@@ -27244,6 +27244,7 @@
 	patches.suse/s390-cio-avoid-duplicated-add-uevents
 	patches.suse/s390-cio-generate-delayed-uevent-for-vfio-ccw-subchannels
 	patches.suse/libata-Return-correct-status-in-sata_pmp_eh_recover_.patch
+	patches.suse/scsi-lpfc-fix-crash-in-target-side-cable-pulls-hitting-wait_for_unreg
 	patches.suse/ALSA-pcm-oss-Fix-regression-by-buffer-overflow-fix.patch
 	patches.suse/ALSA-hda-Fix-potential-access-overflow-in-beep-helpe.patch
 	patches.suse/ALSA-ice1724-Fix-invalid-access-for-enumerated-ctl-i.patch
