scsi: iscsi: Avoid potential deadlock in iscsi_if_rx func (bsc#1171611).

--- a/series.conf
+++ b/series.conf
@@ -26382,6 +26382,7 @@
 	patches.suse/scsi-iscsi-qla4xxx-fix-double-free-in-probe
 	patches.suse/scsi-libsas-stop-discovering-if-oob-mode-is-disconnected
 	patches.suse/scsi-iscsi-fix-a-potential-deadlock-in-the-timeout-handler
+	patches.suse/scsi-iscsi-avoid-potential-deadlock-in-iscsi_if_rx-func
 	patches.suse/regulator-rn5t618-fix-module-aliases.patch
 	patches.suse/btrfs-do-not-call-synchronize_srcu-in-inode_tree_del.patch
 	patches.suse/btrfs-don-t-double-lock-the-subvol_sem-for-rename-exchange.patch
