--- a/series.conf
+++ b/series.conf
@@ -27074,6 +27074,7 @@
 	patches.suse/KEYS-reaching-the-keys-quotas-correctly.patch
 	patches.suse/libata-Remove-extra-scsi_host_put-in-ata_scsi_add_ho.patch
 	patches.suse/block-bfq-fix-use-after-free-in-bfq_idle_slice_timer.patch
+	patches.suse/block-drbd-delete-invalid-function-drbd_md_mark_dirty_
 	patches.suse/block-keep-bdi-io_pages-in-sync-with-max_sectors_kb-.patch
 	patches.suse/media-usbtv-fix-control-message-timeouts.patch
 	patches.suse/0001-media-flexcop-usb-fix-endpoint-sanity-check.patch
