--- a/series.conf
+++ b/series.conf
@@ -25717,6 +25717,7 @@
 	patches.suse/firmware-dmi-fix-unlikely-out-of-bounds-read.patch
 	patches.suse/0001-scsi-sd-Ignore-a-failure-to-sync-cache-due-to-lack-o.patch
 	patches.suse/scsi-qla2xxx-Remove-WARN_ON_ONCE-in-qla2x00_status_c.patch
+	patches.suse/scsi-core-save-restore-command-resid-for-error-handling
 	patches.suse/scsi-zfcp-fix-reaction-on-bit-error-threshold-notification
 	patches.suse/platform-x86-classmate-laptop-remove-unused-variable.patch
 	patches.suse/Input-da9063-fix-capability-and-drop-KEY_SLEEP.patch
