scsi: qla4xxx: Adjust indentation in qla4xxx_mem_free (bsc#1171617).

--- a/series.conf
+++ b/series.conf
@@ -26684,6 +26684,7 @@
 	patches.suse/0013-dm-zoned-support-zone-sizes-smaller-than-128MiB.patch
 	patches.suse/0014-dm-writecache-fix-incorrect-flush-sequence-when-doin.patch
 	patches.suse/scsi-ufs-recheck-bkops-level-if-bkops-is-disabled
+	patches.suse/scsi-qla4xxx-adjust-indentation-in-qla4xxx_mem_free
 	patches.suse/scsi-qla2xxx-Remove-defer-flag-to-indicate-immeadiat.patch
 	patches.suse/scsi-qla2xxx-Fix-fabric-scan-hang.patch
 	patches.suse/scsi-qla2xxx-Add-a-shadow-variable-to-hold-disc_stat.patch
