--- a/series.conf
+++ b/series.conf
@@ -25860,6 +25860,7 @@
 	patches.suse/ceph-add-missing-check-in-d_revalidate-snapdir-handling.patch
 	patches.suse/ceph-don-t-try-to-handle-hashed-dentries-in-non-o_creat-atomic_open.patch
 	patches.suse/pwm-bcm-iproc-Prevent-unloading-the-driver-module-wh.patch
+	patches.suse/block-drbd-remove-a-stray-unlock-in-_drbd_send_protocol
 	patches.suse/cgroup-writeback-don-t-switch-wbs-immediately-on-dea.patch
 	patches.suse/dccp-do-not-leak-jiffies-on-the-wire.patch
 	patches.suse/can-gs_usb-gs_can_open-prevent-memory-leak.patch
