--- a/series.conf
+++ b/series.conf
@@ -26524,6 +26524,7 @@
 	patches.suse/USB-serial-keyspan-handle-unbound-ports.patch
 	patches.suse/USB-serial-quatech2-handle-unbound-ports.patch
 	patches.suse/iio-buffer-align-the-size-of-scan-bytes-to-size-of-t.patch
+	patches.suse/scsi-fnic-fix-invalid-stack-access
 	patches.suse/x86-resctrl-fix-an-imbalance-in-domain_remove_cpu.patch
 	patches.suse/x86-resctrl-fix-potential-memory-leak.patch
 	patches.suse/drm-i915-Add-missing-include-file-linux-math64.h.patch
