--- a/series.conf
+++ b/series.conf
@@ -26501,6 +26501,7 @@
 	patches.suse/iommu-remove-device-link-to-group-on-failure
 	patches.suse/iommu-vt-d-unlink-device-if-failed-to-add-to-group
 	patches.suse/drm-i915-gen9-Clear-residual-context-state-on-contex.patch
+	patches.suse/scsi-sd-clear-sdkp-protection_type-if-disk-is-reformatted-without-pi
 	patches.suse/fix-autofs-regression-caused-by-follow_managed-changes.patch
 	patches.suse/platform-x86-asus-wmi-Fix-keyboard-brightness-cannot.patch
 	patches.suse/clk-Don-t-try-to-enable-critical-clocks-if-prepare-f.patch
