--- a/series.conf
+++ b/series.conf
@@ -26257,6 +26257,7 @@
 	patches.suse/scsi-csiostor-don-t-enable-irqs-too-early
 	patches.suse/scsi-esas2r-unlock-on-error-in-esas2r_nvram_read_direct
 	patches.suse/scsi-zfcp-trace-channel-log-even-for-fcp-command-responses
+	patches.suse/scsi-core-scsi_trace-use-get_unaligned_be
 	patches.suse/scsi-qla2xxx-Retry-PLOGI-on-FC-NVMe-PRLI-failure.patch
 	patches.suse/scsi-qla2xxx-Do-command-completion-on-abort-timeout.patch
 	patches.suse/scsi-qla2xxx-Fix-SRB-leak-on-switch-command-timeout.patch
