scsi: fnic: fix msix interrupt allocation (bsc#1171610).

--- a/series.conf
+++ b/series.conf
@@ -25521,6 +25521,7 @@
 	patches.suse/scsi-qedf-use-discovery-list-to-traverse-rports
 	patches.suse/scsi-qedf-fix-race-betwen-fipvlan-request-and-response-path
 	patches.suse/scsi-qedf-update-the-version-to-8-42-3-0
+	patches.suse/scsi-fnic-fix-msix-interrupt-allocation
 	patches.suse/scsi-qla2xxx-Fix-message-indicating-vectors-used-by-.patch
 	patches.suse/scsi-qla2xxx-Fix-flash-read-for-Qlogic-ISPs.patch
 	patches.suse/scsi-qla2xxx-Fix-driver-reload-for-ISP82xx.patch
