--- a/series.conf
+++ b/series.conf
@@ -26379,6 +26379,7 @@
 	patches.suse/0011-scsi-qla2xxx-Don-t-defer-relogin-unconditonally.patch
 	patches.suse/0012-scsi-qla2xxx-Ignore-PORT-UPDATE-after-N2N-PLOGI.patch
 	patches.suse/0013-scsi-qla2xxx-Add-debug-dump-of-LOGO-payload-and-ELS-.patch
+	patches.suse/scsi-iscsi-qla4xxx-fix-double-free-in-probe
 	patches.suse/scsi-libsas-stop-discovering-if-oob-mode-is-disconnected
 	patches.suse/regulator-rn5t618-fix-module-aliases.patch
 	patches.suse/btrfs-do-not-call-synchronize_srcu-in-inode_tree_del.patch
