scsi: ufs: Fix ufshcd_hold() caused scheduling while atomic (bsc#1171624).

--- a/series.conf
+++ b/series.conf
@@ -27152,6 +27152,7 @@
 	patches.suse/ALSA-hda-realtek-Set-principled-PC-Beep-configuratio.patch
 	patches.suse/scsi-tcm_qla2xxx-Make-qlt_alloc_qfull_cmd-set-cmd-se.patch
 	patches.suse/scsi-qla2xxx-Check-locking-assumptions-at-runtime-in.patch
+	patches.suse/scsi-ufs-fix-ufshcd_hold-caused-scheduling-while-atomic
 	patches.suse/scsi-qla2xxx-Add-beacon-LED-config-sysfs-interface.patch
 	patches.suse/scsi-qla2xxx-Move-free-of-fcport-out-of-interrupt-co.patch
 	patches.suse/scsi-qla2xxx-Add-sysfs-node-for-D-Port-Diagnostics-A.patch
