scsi: bnx2i: fix potential use after free (bsc#1171600).

--- a/series.conf
+++ b/series.conf
@@ -26272,6 +26272,7 @@
 	patches.suse/scsi-qla2xxx-don-t-use-zero-for-FC4_PRIORITY_NVME.patch
 	patches.suse/scsi-lpfc-fix-coverity-lpfc_cmpl_els_rsp-null-pointer-dereferences
 	patches.suse/scsi-qla4xxx-fix-double-free-bug
+	patches.suse/scsi-bnx2i-fix-potential-use-after-free
 	patches.suse/xfs-Sanity-check-flags-of-Q_XQUOTARM-call.patch
 	patches.suse/0009-hrtimer-Annotate-lockless-access-to-timer-state.patch
 	patches.suse/apparmor-fix-unsigned-len-comparison-with-less-than-zero.patch
