--- a/series.conf
+++ b/series.conf
@@ -26258,6 +26258,7 @@
 	patches.suse/scsi-esas2r-unlock-on-error-in-esas2r_nvram_read_direct
 	patches.suse/scsi-zfcp-trace-channel-log-even-for-fcp-command-responses
 	patches.suse/scsi-core-scsi_trace-use-get_unaligned_be
+	patches.suse/scsi-tracing-fix-handling-of-transfer-length-0-for-read6-and-write6
 	patches.suse/scsi-qla2xxx-Retry-PLOGI-on-FC-NVMe-PRLI-failure.patch
 	patches.suse/scsi-qla2xxx-Do-command-completion-on-abort-timeout.patch
 	patches.suse/scsi-qla2xxx-Fix-SRB-leak-on-switch-command-timeout.patch
