mmc: sdhci-of-at91: fix memleak on clk_get failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26578,6 +26578,7 @@
 	patches.suse/do_last-fetch-directory--i_mode-and--i_uid-before-its-too-late.patch
 	patches.suse/scsi-fnic-do-not-queue-commands-during-fwreset.patch
 	patches.suse/mmc-spi-Toggle-SPI-polarity-do-not-hardcode-it.patch
+	patches.suse/mmc-sdhci-of-at91-fix-memleak-on-clk_get-failure.patch
 	patches.suse/livepatch-selftest-clean-up-shadow-variable-names-and-type.patch
 	patches.suse/livepatch-samples-selftest-use-klp_shadow_alloc-api-correctly.patch
 	patches.suse/regulator-rk808-Lower-log-level-on-optional-GPIOs-be.patch
