--- a/series.conf
+++ b/series.conf
@@ -53576,6 +53576,7 @@
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 	patches.suse/ceph-fix-endianness-bug-when-handling-mds-session-feature-bits.patch
 	patches.suse/ceph-fix-double-unlock-in-handle_cap_export.patch
+	patches.suse/ceph-demote-quotarealm-lookup-warning-to-a-debug-message.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
