--- a/series.conf
+++ b/series.conf
@@ -53575,6 +53575,7 @@
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 	patches.suse/ceph-fix-endianness-bug-when-handling-mds-session-feature-bits.patch
+	patches.suse/ceph-fix-double-unlock-in-handle_cap_export.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
