ceph: fix endianness bug when handling MDS session feature bits (bsc#1171695).

--- a/series.conf
+++ b/series.conf
@@ -53574,6 +53574,7 @@
 	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
+	patches.suse/ceph-fix-endianness-bug-when-handling-mds-session-feature-bits.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
