--- a/series.conf
+++ b/series.conf
@@ -27836,6 +27836,7 @@
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_v_ogm_process.patch
 	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
+	patches.suse/ceph-fix-endianness-bug-when-handling-mds-session-feature-bits.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-ibmvscsi-Fix-WARN_ON-during-event-pool-release.patch
