- ceph: fix double unlock in handle_cap_export() (bsc#1171694).

--- a/series.conf
+++ b/series.conf
@@ -27837,6 +27837,7 @@
 	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/ceph-fix-endianness-bug-when-handling-mds-session-feature-bits.patch
+	patches.suse/ceph-fix-double-unlock-in-handle_cap_export.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-ibmvscsi-Fix-WARN_ON-during-event-pool-release.patch
