--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1540,3 +1540,4 @@ f9bf8adb55cd5a357b247a16aafddf8c97b276e0 # not a regression - Fixes tag is wrong
 71912e08e06b7041ba3b40945328b84798dfe6fc # gcc warning fix on comment description
 5a57c05b56b6eb2b4e3eb2a9f205e39e849325a1 # sparse warning fix
 d61acbbf54c612ea9bf67eed609494cda0857b3a # Needs extra dependency, while current out-of-tree solution is good enough
+12ae44a40a1be891bdc6463f8c7072b4ede746ef # no applicable, requires 0c44a8e0fc55
