Update to final upstream, rename, and move to sorted section:
- patches.suse/cifs-print-warning-once-if-mounting-with-vers-1.0.patch

--- a/series.conf
+++ b/series.conf
@@ -27157,6 +27157,7 @@
 	patches.suse/cifs-use-mod_delayed_work-for-server-reconnect-if-al.patch
 	patches.suse/cifs-make-use-of-cap_unix-ses-in-cifs_reconnect_tcon.patch
 	patches.suse/smb3-fix-performance-regression-with-setting-mtime.patch
+	patches.suse/cifs-print-warning-mounting-with-vers-1-0.patch
 	patches.suse/cifs-rename-posix-create-rsp.patch
 	patches.suse/cifs-add-smb2-POSIX-info-level.patch
 	patches.suse/cifs-plumb-smb2-POSIX-dir-enumeration.patch
@@ -27424,7 +27425,6 @@
 	patches.suse/powerpc-pseries-mobility-notify-network-peers-after-.patch
 	patches.suse/powerpc-pseries-group-lmb-operation-and-memblock-s.patch
 	patches.suse/powerpc-pseries-update-device-tree-before-ejecting-h.patch
-	patches.suse/cifs-print-warning-once-if-mounting-with-vers-1.0.patch
 	patches.suse/ext4-Check-for-non-zero-journal-inum-in-ext4_calculate_overhead.patches
 	patches.suse/Deprecate-NR_UNSTABLE_NFS-use-NR_WRITEBACK.patch
 	patches.suse/MM-replace-PF_LESS_THROTTLE-with-PF_LOCAL_THROTTLE.patch
