CIFS: Increment num_remote_opens stats counter even in case of smb2_query_dir_first (bsc#1144333).

--- a/series.conf
+++ b/series.conf
@@ -27069,6 +27069,7 @@
 	patches.suse/x86-mce-fix-logic-and-comments-around-msr_ppin_ctl.patch
 	patches.suse/perf-amd-uncore-replace-manual-sampling-check-with-cap_no_interrupt-flag.patch
 	patches.suse/cifs-potential-unintitliazed-error-code-in-cifs_geta.patch
+	patches.suse/CIFS-Increment-num_remote_opens-stats-counter-even-in-case-of-smb2_.patch
 	patches.suse/mmc-sdhci-of-at91-fix-cd-gpios-for-SAMA5D2.patch
 	patches.suse/drm-bridge-dw-hdmi-fix-AVI-frame-colorimetry.patch
 	patches.suse/drm-bochs-downgrade-pci_request_region-failure-from-.patch
