--- a/series.conf
+++ b/series.conf
@@ -27166,6 +27166,7 @@
 	patches.suse/cifs-do-d_move-in-rename.patch
 	patches.suse/cifs-allow-unlock-flock-and-OFD-lock-across-fork.patch
 	patches.suse/fs-cifs-fix-gcc-warning-in-sid_to_id.patch
+	patches.suse/CIFS-Warn-less-noisily-on-default-mount.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
