--- a/series.conf
+++ b/series.conf
@@ -27168,6 +27168,7 @@
 	patches.suse/fs-cifs-fix-gcc-warning-in-sid_to_id.patch
 	patches.suse/CIFS-Warn-less-noisily-on-default-mount.patch
 	patches.suse/cifs-cifspdu-h-Replace-zero-length-array-with-flexible-array-membe.patch
+	patches.suse/cifs-clear-PF_MEMALLOC-before-exiting-demultiplex-thread.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
