--- a/series.conf
+++ b/series.conf
@@ -27171,6 +27171,7 @@
 	patches.suse/cifs-clear-PF_MEMALLOC-before-exiting-demultiplex-thread.patch
 	patches.suse/cifs-smb2pdu-h-Replace-zero-length-array-with-flexible-array-membe.patch
 	patches.suse/SMB3-Add-new-compression-flags.patch
+	patches.suse/SMB3-Additional-compression-structures.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
