--- a/series.conf
+++ b/series.conf
@@ -27173,6 +27173,7 @@
 	patches.suse/SMB3-Add-new-compression-flags.patch
 	patches.suse/SMB3-Additional-compression-structures.patch
 	patches.suse/SMB3-Minor-cleanup-of-protocol-definitions.patch
+	patches.suse/CIFS-check-new-file-size-when-extending-file-by-fallocate.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
