--- a/series.conf
+++ b/series.conf
@@ -27176,6 +27176,7 @@
 	patches.suse/CIFS-check-new-file-size-when-extending-file-by-fallocate.patch
 	patches.suse/CIFS-Fix-bug-which-the-return-value-by-asynchronous-read-is-error.patch
 	patches.suse/smb3-use-SMB2_SIGNATURE_SIZE-define.patch
+	patches.suse/cifs-smbd-Calculate-the-correct-maximum-packet-size-for-segmented-.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
