cifs: Allocate encryption header through kmalloc (bsc#1144333).

--- a/series.conf
+++ b/series.conf
@@ -27178,6 +27178,7 @@
 	patches.suse/smb3-use-SMB2_SIGNATURE_SIZE-define.patch
 	patches.suse/cifs-smbd-Calculate-the-correct-maximum-packet-size-for-segmented-.patch
 	patches.suse/cifs-smbd-Check-and-extend-sender-credits-in-interrupt-context.patch
+	patches.suse/cifs-Allocate-encryption-header-through-kmalloc.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
