cifs: smbd: Check send queue size before posting a send (bsc#1144333).

--- a/series.conf
+++ b/series.conf
@@ -27351,6 +27351,7 @@
 	patches.suse/0020-lib-raid6-test-fix-build-on-distros-whose-bin-sh-is-.patch
 	patches.suse/cifs-ignore-cached-share-root-handle-closing-errors.patch
 	patches.suse/cifs-smbd-Merge-code-to-track-pending-packets.patch
+	patches.suse/cifs-smbd-Check-send-queue-size-before-posting-a-send.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
