net/mlx5: Add new fields to Port Type and Speed register (bsc#1171118).

--- a/series.conf
+++ b/series.conf
@@ -46436,6 +46436,7 @@
 	patches.suse/devlink-Fix-list-access-without-lock-while-reading-r.patch
 	patches.suse/0001-cxgb4-cxgb4vf-Add-support-for-SGE-doorbell-queue-tim.patch
 	patches.suse/0001-cxgb4-Add-capability-to-get-set-SGE-Doorbell-Queue-T.patch
+	patches.suse/net-mlx5-Add-new-fields-to-Port-Type-and-Speed-regis.patch
 	patches.suse/net-hns3-make-function-hclge_set_all_vf_rst-static.patch
 	patches.suse/mdio_bus-Fix-PTR_ERR-usage-after-initialization-to-c.patch
 	patches.suse/bnx2x-Remove-set-but-not-used-variable-mfw_vn.patch
