--- a/series.conf
+++ b/series.conf
@@ -53254,6 +53254,7 @@
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
 	patches.suse/net-ethtool-Introduce-link_ksettings-API-for-virtual.patch
 	patches.suse/brcmfmac-abort-and-release-host-after-error.patch
+	patches.suse/net-mlx5-Expose-link-speed-directly.patch
 	patches.suse/Bluetooth-RFCOMM-fix-ODEBUG-bug-in-rfcomm_dev_ioctl.patch
 	patches.suse/mwifiex-set-needed_headroom-not-hard_header_len.patch
 	patches.suse/ath9k-Handle-txpower-changes-even-when-TPC-is-disabl.patch
