--- a/series.conf
+++ b/series.conf
@@ -51871,6 +51871,7 @@
 	patches.suse/spi-atmel-Fix-CS-high-support.patch
 	patches.suse/ipmi-dont-allow-device-module-unload-when-in-use.patch
 	patches.suse/ipmi-Fix-memory-leak-in-__ipmi_bmc_register.patch
+	patches.suse/msft-hv-1964-x86-hyperv-Allow-guests-to-enable-InvariantTSC.patch
 	patches.suse/x86-speculation-fix-incorrect-mds-taa-mitigation-status.patch
 	patches.suse/x86-speculation-fix-redundant-mds-mitigation-message.patch
 	patches.suse/cpuidle-Do-not-unset-the-driver-if-it-is-there-alrea.patch
