--- a/series.conf
+++ b/series.conf
@@ -53146,6 +53146,7 @@
 	patches.suse/net-fec-validate-the-new-settings-in-fec_enet_set_co.patch
 	patches.suse/net-packet-tpacket_rcv-do-not-increment-ring-index-o.patch
 	patches.suse/net-memcg-fix-lockdep-splat-in-inet_csk_accept.patch
+	patches.suse/net-hns3-fix-tc-qdisc-del-failed-issue.patch
 	patches.suse/drm-i915-gvt-fix-unnecessary-schedule-timer-when-no-vgpu-exits
 	patches.suse/iommu-vt-d-fix-a-bug-in-intel_iommu_iova_to_phys-for-huge-page
 	patches.suse/iommu-dma-fix-msi-reservation-allocation
