--- a/series.conf
+++ b/series.conf
@@ -53591,6 +53591,7 @@
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_v_ogm_process.patch
 	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
+	patches.suse/devlink-fix-return-value-after-hitting-end-in-region.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 	patches.suse/ceph-fix-endianness-bug-when-handling-mds-session-feature-bits.patch
 	patches.suse/ceph-fix-double-unlock-in-handle_cap_export.patch
