bnxt_en: Return error if bnxt_alloc_ctx_mem() fails (bsc#1104745 FATE#325918).

--- a/series.conf
+++ b/series.conf
@@ -53199,6 +53199,7 @@
 	patches.suse/net-qmi_wwan-add-support-for-ASKEY-WWHC050.patch
 	patches.suse/macsec-restrict-to-ethernet-devices.patch
 	patches.suse/bnxt_en-fix-memory-leaks-in-bnxt_dcbnl_ieee_getets.patch
+	patches.suse/bnxt_en-Return-error-if-bnxt_alloc_ctx_mem-fails.patch
 	patches.suse/net-dsa-Fix-duplicate-frames-flooded-by-learning.patch
 	patches.suse/net-ena-add-pci-shutdown-handler-to-allow-safe-kexec.patch
 	patches.suse/0001-ceph-check-pool_flag_full-nearfull-in-addition-to-osdmap_full-nearfull.patch
