cxgb4: fix Txq restart check during backpressure (bsc#1127354 bsc#1127371).

--- a/series.conf
+++ b/series.conf
@@ -53191,6 +53191,7 @@
 	patches.suse/net_sched-cls_route-remove-the-right-filter-from-has.patch
 	patches.suse/net-mvneta-Fix-the-case-where-the-last-poll-did-not-.patch
 	patches.suse/vxlan-check-return-value-of-gro_cells_init.patch
+	patches.suse/cxgb4-fix-Txq-restart-check-during-backpressure.patch
 	patches.suse/hsr-fix-general-protection-fault-in-hsr_addr_is_self.patch
 	patches.suse/slcan-not-call-free_netdev-before-rtnl_unlock-in-slc.patch
 	patches.suse/tcp-repair-fix-TCP_QUEUE_SEQ-implementation.patch
