Revert "RDMA/cma: Simplify rdma_resolve_addr() error flow" (bsc#1103992 FATE#326009).

--- a/series.conf
+++ b/series.conf
@@ -53092,6 +53092,7 @@
 	patches.suse/powerpc-fix-hardware-PMU-exception-bug-on-PowerVM-co.patch
 	patches.suse/s390-pci-fix-unexpected-write-combine-on-resource
 	patches.suse/blktrace-fix-dereference-after-null-check.patch
+	patches.suse/Revert-RDMA-cma-Simplify-rdma_resolve_addr-error-flo.patch
 	patches.suse/0001-usb-quirks-add-NO_LPM-quirk-for-Logitech-Screen-Shar.patch
 	patches.suse/0001-usb-storage-Add-quirk-for-Samsung-Fit-flash.patch
 	patches.suse/0001-usb-core-hub-do-error-out-if-usb_autopm_get_interfac.patch
