--- a/series.conf
+++ b/series.conf
@@ -53592,6 +53592,7 @@
 	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/devlink-fix-return-value-after-hitting-end-in-region.patch
+	patches.suse/net_sched-sch_skbprio-add-message-validation-to-skbp.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 	patches.suse/ceph-fix-endianness-bug-when-handling-mds-session-feature-bits.patch
 	patches.suse/ceph-fix-double-unlock-in-handle_cap_export.patch
