--- a/series.conf
+++ b/series.conf
@@ -53447,6 +53447,7 @@
 	patches.suse/cxgb4-fix-MPS-index-overwrite-when-setting-MAC-addre.patch
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
 	patches.suse/net-phy-micrel-kszphy_resume-add-delay-after-genphy_.patch
+	patches.suse/tun-Don-t-put_page-for-all-negative-return-values-fr.patch
 	patches.suse/net-dsa-bcm_sf2-Do-not-register-slave-MDIO-bus-with-.patch
 	patches.suse/mlxsw-spectrum_flower-Do-not-stop-at-FLOW_ACTION_VLA.patch
 	patches.suse/net-dsa-bcm_sf2-Ensure-correct-sub-node-is-parsed.patch
