bnxt_en: Return error when allocating zero size context memory (bsc#1104745 FATE#325918).

--- a/series.conf
+++ b/series.conf
@@ -53584,6 +53584,7 @@
 	patches.suse/nfs-Fix-potential-posix_acl-refcnt-leak-in-nfs3_set_.patch
 	patches.suse/HID-wacom-Read-HID_DG_CONTACTMAX-directly-for-non-ge.patch
 	patches.suse/bnxt_en-Reduce-BNXT_MSIX_VEC_MAX-value-to-supported-.patch
+	patches.suse/bnxt_en-Return-error-when-allocating-zero-size-conte.patch
 	patches.suse/batman-adv-fix-batadv_nc_random_weight_tq.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_show_throughput.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_store_throughpu.patch
