--- a/series.conf
+++ b/series.conf
@@ -53524,6 +53524,7 @@
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/x86-resctrl-Fix-invalid-attempt-at-removing-the-defa.patch
 	patches.suse/nfsd-memory-corruption-in-nfsd4_lock.patch
+	patches.suse/svcrdma-Fix-trace-point-use-after-free-race.patch
 	patches.suse/drm-amdgpu-Correctly-initialize-thermal-controller-f.patch
 	patches.suse/0007-drm-i915-HDCP-fix-Ri-prime-check-done-during-link-ch.patch
 	patches.suse/drm-meson-Delete-an-error-message-in-meson_dw_hdmi_b.patch
