IB/mlx5: Fix missing congestion control debugfs on rep rdma device (bsc#1103991 FATE#326007).

--- a/series.conf
+++ b/series.conf
@@ -53300,6 +53300,7 @@
 	patches.suse/0001-drm-amd-acp-fix-broken-menu-structure.patch
 	patches.suse/0006-drm-etnaviv-rework-perfmon-query-infrastructure.patch
 	patches.suse/0018-dm-zoned-remove-duplicate-nr_rnd_zones-increase-in-d.patch
+	patches.suse/IB-mlx5-Fix-missing-congestion-control-debugfs-on-re.patch
 	patches.suse/xfs-add-agf-freeblocks-verify-in-xfs_agf_verify.patch
 	patches.suse/xfs-clear-PF_MEMALLOC-before-exiting-xfsaild-thread.patch
 	patches.suse/xfs-don-t-ever-return-a-stale-pointer-from-__xfs_dir.patch
