--- a/series.conf
+++ b/series.conf
@@ -53423,6 +53423,7 @@
 	patches.suse/misc-pci_endpoint_test-Fix-to-support-10-pci-endpoin.patch
 	patches.suse/s390-cpuinfo-fix-wrong-output-when-cpu0-is-offline
 	patches.suse/s390-diag-fix-display-of-diagnose-call-statistics
+	patches.suse/svcrdma-Fix-double-svc_rdma_send_ctxt_put-in-an-erro.patch
 	patches.suse/SUNRPC-Fix-a-potential-buffer-overflow-in-svc_print_.patch
 	patches.suse/svcrdma-Fix-leak-of-transport-addresses.patch
 	patches.suse/ftrace-kprobe-show-the-maxactive-number-on-kprobe_events.patch
