devlink: validate length of region addr/len (bsc#1109837).

--- a/series.conf
+++ b/series.conf
@@ -53111,6 +53111,7 @@
 	patches.suse/net-dsa-mv88e6xxx-fix-lockup-on-warm-boot.patch
 	patches.suse/bnxt_en-reinitialize-IRQs-when-MTU-is-modified.patch
 	patches.suse/devlink-validate-length-of-param-values.patch
+	patches.suse/devlink-validate-length-of-region-addr-len.patch
 	patches.suse/fib-add-missing-attribute-validation-for-tun_id.patch
 	patches.suse/nl802154-add-missing-attribute-validation.patch
 	patches.suse/nl802154-add-missing-attribute-validation-for-dev_ty.patch
