mlxsw: spectrum_mr: Fix list iteration in error path (bsc#1112374).

--- a/series.conf
+++ b/series.conf
@@ -53211,6 +53211,7 @@
 	patches.suse/scsi-qla2xxx-Fix-I-Os-being-passed-down-when-FC-devi.patch
 	patches.suse/i2c-hix5hd2-add-missed-clk_disable_unprepare-in-remo.patch
 	patches.suse/i2c-st-fix-missing-struct-parameter-description.patch
+	patches.suse/mlxsw-spectrum_mr-Fix-list-iteration-in-error-path.patch
 	patches.suse/bpf-Explicitly-memset-the-bpf_attr-structure.patch
 	patches.suse/bpf-Explicitly-memset-some-bpf-info-structures-decla.patch
 	patches.suse/tpm-ibmvtpm-Wait-for-buffer-to-be-set-before-proceed.patch
