--- a/series.conf
+++ b/series.conf
@@ -53444,6 +53444,7 @@
 	patches.suse/powerpc-64-tm-Don-t-let-userspace-set-regs-trap-via-.patch
 	patches.suse/powerpc-vmlinux.lds-Explicitly-retain-.gnu.hash.patch
 	patches.suse/ipv6-don-t-auto-add-link-local-address-to-lag-ports.patch
+	patches.suse/cxgb4-fix-MPS-index-overwrite-when-setting-MAC-addre.patch
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
 	patches.suse/net-phy-micrel-kszphy_resume-add-delay-after-genphy_.patch
 	patches.suse/net-dsa-bcm_sf2-Do-not-register-slave-MDIO-bus-with-.patch
