--- a/series.conf
+++ b/series.conf
@@ -53502,6 +53502,7 @@
 	patches.suse/0020-lib-raid6-test-fix-build-on-distros-whose-bin-sh-is-.patch
 	patches.suse/cifs-ignore-cached-share-root-handle-closing-errors.patch
 	patches.suse/msft-hv-2044-x86-hyperv-report-value-of-misc_features.patch
+	patches.suse/msft-hv-2045-x86-Hyper-V-Unload-vmbus-channel-in-hv-panic-callbac.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/xsk-Add-missing-check-on-user-supplied-headroom-size.patch
