s390/cpum_cf: Add new extended counters for IBM z15 (bsc#1169762 LTC#185291).

--- a/series.conf
+++ b/series.conf
@@ -53421,6 +53421,7 @@
 	patches.suse/pci-pciehp-fix-msi-interrupt-race
 	patches.suse/PCI-endpoint-Fix-clearing-start-entry-in-configfs.patch
 	patches.suse/misc-pci_endpoint_test-Fix-to-support-10-pci-endpoin.patch
+	patches.suse/s390-cpum_cf-add-new-extended-counters-for-ibm-z15
 	patches.suse/s390-cpuinfo-fix-wrong-output-when-cpu0-is-offline
 	patches.suse/s390-diag-fix-display-of-diagnose-call-statistics
 	patches.suse/svcrdma-Fix-double-svc_rdma_send_ctxt_put-in-an-erro.patch
