s390/pci: do not set affinity for floating irqs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53556,6 +53556,7 @@
 	patches.suse/macsec-avoid-to-set-wrong-mtu.patch
 	patches.suse/bpf-Forbid-XADD-on-spilled-pointers-for-unprivileged.patch
 	patches.suse/s390-ftrace-fix-potential-crashes-when-switching-tracers
+	patches.suse/s390-pci-do-not-set-affinity-for-floating-irqs
 	patches.suse/staging-comedi-dt2815-fix-writing-hi-byte-of-analog-.patch
 	patches.suse/iio-ad7797-Use-correct-attribute_group.patch
 	patches.suse/iio-xilinx-xadc-Fix-ADC-B-powerdown.patch
