smb3: enable swap on SMB3 mounts (bsc#1144333).

--- a/series.conf
+++ b/series.conf
@@ -27358,6 +27358,7 @@
 	patches.suse/cifs-smbd-Do-not-schedule-work-to-send-immediate-packet-on-every-r.patch
 	patches.suse/smb3-smbdirect-support-can-be-configured-by-default.patch
 	patches.suse/smb3-change-noisy-error-message-to-FYI.patch
+	patches.suse/smb3-enable-swap-on-SMB3-mounts.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
