cifs: fix uninitialised lease_key in open_shroot() (bsc#1144333).

--- a/series.conf
+++ b/series.conf
@@ -27411,6 +27411,7 @@
 	patches.suse/cifs-minor-update-to-comments-around-the-cifs_tcp_ses_lock-mutex.patch
 	patches.suse/cifs-do-not-share-tcons-with-DFS.patch
 	patches.suse/cifs-ensure-correct-super-block-for-DFS-reconnect.patch
+	patches.suse/cifs-fix-uninitialised-lease_key-in-open_shroot-.patch
 	patches.suse/mmc-sdhci-xenon-fix-annoying-1.8V-regulator-warning.patch
 	patches.suse/mmc-sdhci-pci-Fix-eMMC-driver-strength-for-BYT-based.patch
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
