ALSA: hda/realtek - Fix S3 pop noise on Dell Wyse (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27388,6 +27388,7 @@
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 	patches.suse/ALSA-usb-audio-Add-control-message-quirk-delay-for-K.patch
 	patches.suse/Revert-ALSA-hda-realtek-Fix-pop-noise-on-ALC225.patch
+	patches.suse/ALSA-hda-realtek-Fix-S3-pop-noise-on-Dell-Wyse.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
