ALSA: hda/realtek - Limit int mic boost for Thinkpad T530 (git-fixes bsc#1171293).

--- a/series.conf
+++ b/series.conf
@@ -27390,6 +27390,7 @@
 	patches.suse/Revert-ALSA-hda-realtek-Fix-pop-noise-on-ALC225.patch
 	patches.suse/ALSA-hda-realtek-Fix-S3-pop-noise-on-Dell-Wyse.patch
 	patches.suse/ALSA-rawmidi-Fix-racy-buffer-resize-under-concurrent.patch
+	patches.suse/ALSA-hda-realtek-Limit-int-mic-boost-for-Thinkpad-T5.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
