ALSA: hda/realtek - Enable headset mic of ASUS GL503VM with ALC295 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53611,6 +53611,7 @@
 	patches.suse/ceph-demote-quotarealm-lookup-warning-to-a-debug-message.patch
 	patches.suse/ALSA-usb-audio-add-mapping-for-ASRock-TRX40-Creator.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Samsung-Notebook.patch
+	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-GL503VM-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
