pinctrl: cherryview: Add missing spinlock usage in chv_gpio_irq_handler (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27392,6 +27392,7 @@
 	patches.suse/ALSA-rawmidi-Fix-racy-buffer-resize-under-concurrent.patch
 	patches.suse/ALSA-hda-realtek-Limit-int-mic-boost-for-Thinkpad-T5.patch
 	patches.suse/pinctrl-baytrail-Enable-pin-configuration-setting-fo.patch
+	patches.suse/pinctrl-cherryview-Add-missing-spinlock-usage-in-chv.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
