pinctrl: sunrisepoint: Fix PAD lock register offset for SPT-H (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53615,6 +53615,7 @@
 	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-UX550GE-.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-UX581LV-.patch
 	patches.suse/ALSA-hda-realtek-Add-COEF-workaround-for-ASUS-ZenBoo.patch
+	patches.suse/pinctrl-sunrisepoint-Fix-PAD-lock-register-offset-fo.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
