blacklist.conf: add one net entry

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1540,3 +1540,4 @@ d61acbbf54c612ea9bf67eed609494cda0857b3a # Needs extra dependency, while current
 9393c8de628cf0968d81a17cc11841e42191e041 # git-fix that caused boot panic, not clearly needed (bsc#1171691)
 8f8fed0cdbbd6cdbf28d9ebe662f45765d2f7d39 # git-fix that can cause stack corruption?
 84a4062632462c4320704fcdf8e99e89e94c0aba # kABI
+526f3d96b8f83b1b13d73bd0b5c79cc2c487ec8e # it's more cleanup than fixup
