PCI: sanity test on PCI vendor to be sure we do not touch everything (bsc#1141558).

--- a/series.conf
+++ b/series.conf
@@ -54017,6 +54017,7 @@
 	patches.suse/SUNRPC-defer-slow-parts-of-rpc_free_client-to-a-work.patch
 	patches.kabi/SUNRPC-defer-slow-parts-of-rpc_free_client-to-a-work-kabi.patch
 	patches.suse/0001-make-some-Fujitsu-systems-run.patch
+	patches.suse/PCI-sanity-test-on-PCI-vendor-to-be-sure-we-do-not-t.patch
 
 	########################################################
 	# end of sorted patches
