bpf: Fix sk_psock refcnt leak when receiving message (bsc#1083647).

--- a/series.conf
+++ b/series.conf
@@ -53607,6 +53607,7 @@
 	patches.suse/ceph-fix-endianness-bug-when-handling-mds-session-feature-bits.patch
 	patches.suse/ceph-fix-double-unlock-in-handle_cap_export.patch
 	patches.suse/ceph-demote-quotarealm-lookup-warning-to-a-debug-message.patch
+	patches.suse/bpf-Fix-sk_psock-refcnt-leak-when-receiving-message.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
