- mtd: spi-nor: cadence-quadspi: add a delay in write sequence   (git-fixes). - Refresh   patches.suse/mtd-spi-nor-Fix-Cadence-QSPI-page-fault-kernel-panic.patch.

--- a/series.conf
+++ b/series.conf
@@ -10544,6 +10544,7 @@
 	patches.suse/0008-xfs-fix-memory-leak-in-xfs_iext_free_last_leaf.patch
 	patches.suse/spi-nor-intel-spi-Fix-number-of-protected-range-regi
 	patches.suse/spi-nor-intel-spi-Fix-broken-software-sequencing-cod
+	patches.suse/mtd-spi-nor-cadence-quadspi-add-a-delay-in-write-seq.patch
 	patches.suse/mtd-spi-nor-stm32-quadspi-Fix-uninitialized-error-re.patch
 	patches.suse/mtd-nand-omap2-Fix-subpage-write.patch
 	patches.suse/mtd-nand-mtk-fix-infinite-ECC-decode-IRQ-issue.patch
