mtd: spi-nor: enable 4B opcodes for mx66l51235l (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10546,6 +10546,7 @@
 	patches.suse/spi-nor-intel-spi-Fix-broken-software-sequencing-cod
 	patches.suse/mtd-spi-nor-cadence-quadspi-add-a-delay-in-write-seq.patch
 	patches.suse/mtd-spi-nor-stm32-quadspi-Fix-uninitialized-error-re.patch
+	patches.suse/mtd-spi-nor-enable-4B-opcodes-for-mx66l51235l.patch
 	patches.suse/mtd-nand-omap2-Fix-subpage-write.patch
 	patches.suse/mtd-nand-mtk-fix-infinite-ECC-decode-IRQ-issue.patch
 	patches.suse/mtd-nand-Fix-writing-mtdoops-to-nand-flash.patch
