drm/atomic: Take the atomic toys away from X (bsc#1112178)
	* context changes

--- a/series.conf
+++ b/series.conf
@@ -51279,6 +51279,7 @@
 	patches.suse/s390-cio-exclude-subchannels-with-no-parent-from-pseudo-check
 	patches.suse/binfmt_elf-Do-not-move-brk-for-INTERP-less-ET_EXEC.patch
 	patches.suse/pNFS-Ensure-we-do-clear-the-return-on-close-layout-s.patch
+	patches.suse/0001-drm-atomic-Take-the-atomic-toys-away-from-X.patch
 	patches.suse/drm-radeon-Bail-earlier-when-radeon.cik_-si_support-.patch
 	patches.suse/drm-amdgpu-Check-for-valid-number-of-registers-to-re.patch
 	patches.suse/drm-amdgpu-Fix-KFD-related-kernel-oops-on-Hawaii.patch
