btrfs: move the dio_sem higher up the callchain (bsc#1171761).

--- a/series.conf
+++ b/series.conf
@@ -21041,6 +21041,7 @@
 	patches.suse/0011-btrfs-only-free-reserved-extent-if-we-didn-t-insert-it.patch
 	patches.suse/0012-btrfs-fix-insert_reserved-error-handling.patch
 	patches.suse/0013-btrfs-don-t-run-delayed_iputs-in-commit.patch
+	patches.suse/btrfs-move-the-dio_sem-higher-up-the-callchain.patch
 	patches.suse/0006-Btrfs-fix-use-after-free-during-inode-eviction.patch
 	patches.suse/0007-Btrfs-fix-use-after-free-when-dumping-free-space.patch
 	patches.suse/0001-xen-fix-race-in-xen_qlock_wait.patch
