ext4: fix extent_status fragmentation for plain files (bsc#1171949).

--- a/series.conf
+++ b/series.conf
@@ -26755,6 +26755,7 @@
 	patches.suse/drm-nouveau-disp-nv50-prevent-oops-when-no-channel-m.patch
 	patches.suse/ext4-fix-deadlock-allocating-crypto-bounce-page-from.patch
 	patches.suse/jbd2-clear-JBD2_ABORT-flag-before-journal_reset-to-u.patch
+	patches.suse/ext4-fix-extent_status-fragmentation-for-plain-files.patch
 	patches.suse/jbd2-switch-to-use-jbd2_journal_abort-when-failed-to.patch
 	patches.suse/ext4-jbd2-ensure-panic-when-aborting-with-zero-errno.patch
 	patches.suse/jbd2-make-sure-ESHUTDOWN-to-be-recorded-in-the-journ.patch
