locks: print unsigned ino in /proc/locks (bsc#1171951). Refresh patches.suse/vfs-add-super_operations-get_inode_dev

--- a/series.conf
+++ b/series.conf
@@ -26465,6 +26465,7 @@
 	patches.suse/gpio-Fix-error-message-on-out-of-range-GPIO-in-looku.patch
 	patches.suse/cifs-Adjust-indentation-in-smb2_open_file.patch
 	patches.suse/cifs-Optimize-readdir-on-reparse-points.patch
+	patches.suse/locks-print-unsigned-ino-in-proc-locks.patch
 	patches.suse/udp-fix-integer-overflow-while-computing-available-s.patch
 	patches.suse/s390-qeth-fix-qdio-teardown-after-early-init-error
 	patches.suse/s390-qeth-lock-the-card-while-changing-its-hsuid
