block: remove the bd_openers checks in blk_drop_partitions (bsc#1171948).

--- a/series.conf
+++ b/series.conf
@@ -27383,6 +27383,7 @@
 	patches.suse/ALSA-hda-hdmi-fix-without-unlocked-before-return.patch
 	patches.suse/ALSA-opti9xx-shut-up-gcc-10-range-warning.patch
 	patches.suse/ALSA-usb-audio-Correct-a-typo-of-NuPrime-DAC-10-USB-.patch
+	patches.suse/block-remove-the-bd_openers-checks-in-blk_drop_parti.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 	patches.suse/nfs-Fix-potential-posix_acl-refcnt-leak-in-nfs3_set_.patch
 	patches.suse/HID-wacom-Read-HID_DG_CONTACTMAX-directly-for-non-ge.patch
